<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@android:color/transparent"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:layout_margin="16dp"
	android:clipChildren="false"
	app:layoutDescription="@xml/motion_scene_popup_identity">

	<ImageView
		android:id="@+id/avatar"
		android:layout_width="40dp"
		android:layout_height="40dp"
		tools:src="@tools:sample/avatars"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent"/>
	<ImageView
		android:background="@drawable/selector_compose_button"
		android:clickable="false"
		android:contentDescription="@string/share_via"
		android:focusable="false"
		android:id="@+id/share_button"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_width="wrap_content"
		app:layout_constraintLeft_toRightOf="@id/identity_label"
		app:layout_constraintTop_toTopOf="@id/identity_label" />

	<ImageView
		android:id="@+id/qr_image"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginTop="8dp"
		android:adjustViewBounds="false"
		android:clickable="false"
		android:contentDescription="@string/qr_code"
		android:foreground="?selectableItemBackground"
		android:scaleType="fitCenter"
		app:layout_constraintLeft_toLeftOf="@id/avatar"
		app:layout_constraintTop_toBottomOf="@id/identity_label" />

	<TextView
		android:contentDescription="@string/my_id"
		android:id="@+id/identity_label"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_width="wrap_content"
		android:text="ABCDEFGH"
		android:textColor="?attr/textColorPrimary"
		android:textSize="24sp"
		app:layout_constraintLeft_toRightOf="@id/avatar"
		app:layout_constraintBottom_toBottomOf="@id/avatar" />

	<!-- arrow -->

	<TextView
		android:background="?selectableItemBackground"
		android:clickable="true"
		android:focusable="true"
		android:id="@+id/web_label"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/webclient"
		android:textAppearance="@style/Threema.TextAppearance.Body2"
		app:layout_constraintBaseline_toBaselineOf="@id/web_enable"
		app:layout_constraintLeft_toRightOf="@id/web_enable" />

	<androidx.appcompat.widget.SwitchCompat
		android:contentDescription="@string/webclient_enable"
		android:id="@+id/web_enable"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_width="wrap_content"
		app:layout_constraintLeft_toLeftOf="@id/qr_image"
		app:layout_constraintTop_toBottomOf="@id/qr_image"
		app:switchPadding="0dp" />

	<androidx.constraintlayout.widget.Group
		android:id="@+id/web_controls"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		app:constraint_referenced_ids="web_enable,web_label" />

	<com.google.android.material.chip.Chip
		android:gravity="center_vertical"
		android:id="@+id/scan_button"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_width="wrap_content"
		android:text="@string/scan_id"
		app:chipIcon="@drawable/ic_qr_code_scan"
		app:ensureMinTouchTargetSize="false"
		app:layout_constraintLeft_toLeftOf="@id/profile_button"
		app:layout_constraintTop_toBottomOf="@id/profile_button" />

	<com.google.android.material.chip.Chip
		android:gravity="center_vertical"
		android:id="@+id/profile_button"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/my_profile"
		app:chipIcon="@drawable/ic_profile"
		app:ensureMinTouchTargetSize="false"
		app:layout_constraintLeft_toRightOf="@id/qr_image"
		app:layout_constraintTop_toTopOf="@id/qr_image" />

</androidx.constraintlayout.motion.widget.MotionLayout>
